--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.12",
+    "redux": "^3.7.2",
+    "reduxsauce": "^0.6.0",
     "soundfont-player": "^0.10.6",
     "tonal": "^0.69.9"
   },
