--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=./testBootstrap.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "devDependencies": {
+    "prettier": "^1.6.1",
     "web-audio-test-api": "^0.5.2"
   }
 }
