--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=./testBootstrap.js",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write \"src/**/*.{js,jsx}\""
+    "prettier": "prettier --write \"src/**/*.{js,jsx}\"",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
+    "husky": "^0.14.3",
+    "lint-staged": "^4.1.0",
     "prettier": "^1.6.1",
     "web-audio-test-api": "^0.5.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
