--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chroma-js": "^1.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.12",
     "redux": "^3.7.2",
@@ -12,6 +14,7 @@
     "reduxsauce": "^0.6.0",
     "rxjs": "^5.4.3",
     "soundfont-player": "^0.10.6",
+    "styled-components": "^2.1.2",
     "tonal": "^0.69.9"
   },
   "scripts": {
@@ -33,5 +36,9 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
