Added routing and componentized layout

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
     "redux": "^3.7.2",
     "redux-observable": "^0.16.0",
