--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rxjs": "^5.4.3",
     "soundfont-player": "^0.10.6",
     "styled-components": "^2.1.2",
-    "tonal": "^0.69.9",
+    "tonal": "^1.0.0",
+    "tonal-range": "^1.0.0",
     "vexflow": "^1.2.84"
   },
   "scripts": {
