--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://holden-caulfield.github.io/empa-trainer",
   "dependencies": {
     "@tonaljs/array": "^3.2.3",
+    "@tonaljs/chord": "^3.2.3",
+    "@tonaljs/note": "^3.2.4",
+    "@tonaljs/progression": "^3.2.3",
     "@tonaljs/range": "^3.2.4",
     "@tonaljs/tonal": "^3.2.2",
     "chroma-js": "^1.3.4",
