--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.1",
-    "redux-observable": "^1.2.0",
+    "redux-logic": "^2.1.1",
     "reduxsauce": "^0.6.0",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
     "soundfont-player": "^0.10.6",
     "styled-components": "^2.2.1",
     "vexflow": "^1.2.84"
